// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Blocks Accordion should render block "Accordion" without content 1`] = `
<section
  class="p-[50px] mb-1 last:mb-0 font-sans bg-white text-primary-text "
>
  <ul
    class="list-none m-0 p-0"
  />
</section>
`;

exports[`Blocks AccordionItem should render block "AccordionItem" without content 1`] = `
<li
  class="border-0 border-b border-solid border-main-divider last:border-b-0 "
>
  <div>
    <button
      class="border-none bg-transparent px-0 pt-5 pb-3.5 flex justify-between text-left w-full font-sans text-h6 group cursor-pointer"
    >
      <span
        class="text-xl font-medium pr-2.5"
      />
      <div
        class="text-primary-main flex-shrink-0"
      >
        <svg
          aria-hidden="true"
          class="width: 24px  text-primary-main  "
          height="24"
          width="24"
        >
          <title>
            Иконка PlusIcon
          </title>
          <desc>
            Иконка PlusIcon
          </desc>
          <use
            href="icons/PlusIcon.svg#icon"
            xlink:href="icons/PlusIcon.svg#icon"
          />
        </svg>
      </div>
    </button>
    <div
      class="transition-max-h duration-300 overflow-hidden max-h-0 grid grid-cols-12 gap-5 [&>*]:p-0"
    />
  </div>
</li>
`;

exports[`Blocks BenefitsBlock should render block "BenefitsBlock" without content 1`] = `
<section
  class="font-sans text-primary-text p-12 flex flex-col items-center  bg-white"
/>
`;

exports[`Blocks Bonus should render block "Bonus" without content 1`] = `
<section
  class="font-sans bg-white p-[50px] pb-9 "
>
  <div
    class="container"
  >
    <section
      class="font-sans flex flex-col p-[50px] gap-3 bg-transparent !p-0"
    />
    <div
      class="flex flex-wrap w-full mt-9"
    />
  </div>
</section>
`;

exports[`Blocks BonusBenefitsBlock should render block "BonusBenefitsBlock" without content 1`] = `
<section
  class="font-sans text-primary-text bg-white p-[50px] flex flex-col text-center "
>
  <section
    class="font-sans flex flex-col p-[50px] gap-3 bg-transparent !p-0"
  />
</section>
`;

exports[`Blocks Calculator should render block "Calculator" without content 1`] = `
<section
  class="box-border overflow-hidden relative font-sans w-100 text-primary-text bg-white "
>
  <div
    class="bg-white"
  >
    <div />
  </div>
  <div
    class="flex"
    role="list"
    style="transform: translateX(-000%);"
  />
</section>
`;

exports[`Blocks CardTransfer should render block "CardTransfer" without content 1`] = `
<section
  class="p-[50px] flex flex-col items-center font-sans bg-white "
>
  <h3
    class="font-sans m-0 text-h2 max-w-[684px] pb-9"
  >
    Укажите сумму перевода
  </h3>
  <form
    action="https://www.rshb.ru/p2p/"
    class="w-[468px]"
    method="POST"
  >
    <div
      class="relative "
    >
      <label
        class="block text-m-light mb-2"
      >
        Сумма перевода
      </label>
      <input
        class="w-full border rounded-md text-primary-text outline-none p-4 pr-8 border-main-stroke hover:border-primary-hover active:border-primary-text focus:border-primary-text w-full"
        name="amount"
        placeholder="1500"
        type="text"
        value=""
      />
      <span
        class="text-xl-light absolute right-4 bottom-4"
      >
        ₽
      </span>
    </div>
  </form>
</section>
`;

exports[`Blocks Catalog should render block "Catalog" without content 1`] = `
<section
  class="bg-white relative font-sans p-12 overflow-hidden text-center "
>
  <section
    class="font-sans flex flex-col p-[50px] gap-3 bg-transparent !p-0"
  />
  <div
    class="flex duration-1000 gap-3.5 mt-8"
    role="list"
    style="transform: translateX(-0px);"
  />
  <div />
  <div
    class="absolute top-0 bottom-0 w-[84px] left-0 bg-opacity-from-white"
  />
  <div
    class="absolute top-0 bottom-0 w-[84px] right-0 bg-opacity-to-white"
  />
</section>
`;

exports[`Blocks ComparisonTable should render block "ComparisonTable" without content 1`] = `
<section
  class="bg-white font-sans py-[50px] pl-[50px] overflow-hidden text-primary-text relative "
>
  <h3
    class="font-sans m-0 text-h2 max-w-[47rem] text-center mb-9 mx-auto"
  />
  <div>
    <div
      role="table"
    />
  </div>
</section>
`;

exports[`Blocks ContactsBlock should render block "ContactsBlock" without content 1`] = `
<section
  class="bg-primary-main text-white flex p-12 "
/>
`;

exports[`Blocks ErrorBlock should render block "ErrorBlock" without content 1`] = `
<section
  class="flex flex-col justify-center items-center mt-12 "
  role="listitem"
>
  <div
    class="flex justify-center py-20"
  />
</section>
`;

exports[`Blocks ExchangeRateTile should render block "ExchangeRateTile" without content 1`] = `
<section
  class="bg-white text-primary-text font-sans p-9 box-border min-h-[320px] "
>
  <div
    class="font-sans flex flex-col grow h-full items-start "
  >
    <h3
      class="font-sans m-0 text-h4 whitespace-pre-wrap text-h4 mb-5"
    >
      Курсы обмена валют
    </h3>
    <div
      class="flex grow w-full justify-between"
    >
      <div
        class="flex flex-col justify-between w-full"
      >
        <div
          class="h-full"
        >
          <div
            class="flex"
          >
            <div
              class="mr-14 pt-4"
            >
              <table
                class="h-fit w-fit mb-[30px]"
              >
                <thead>
                  <tr>
                    <th
                      class="text-left text-m-light text-secondary-text"
                    >
                      Валюта
                    </th>
                    <th
                      class="text-left text-m-light text-secondary-text pl-11"
                    >
                      Купить
                    </th>
                    <th
                      class="text-left text-m-light text-secondary-text pl-11"
                    >
                      Продать
                    </th>
                  </tr>
                </thead>
                <tbody />
              </table>
              <div
                class="flex "
              >
                <svg
                  aria-hidden="true"
                  class="width: 24px  text-primary-main  "
                  height="24"
                  width="24"
                >
                  <title>
                    Иконка GpsIcon
                  </title>
                  <desc>
                    Иконка GpsIcon
                  </desc>
                  <use
                    href="icons/GpsIcon.svg#icon"
                    xlink:href="icons/GpsIcon.svg#icon"
                  />
                </svg>
                <div
                  class="ml-3"
                >
                  <p
                    class="text-secondary-text m-0 text-m"
                  >
                    Курс указан для ближайшего офиса
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`Blocks Footer should render block "Footer" without content 1`] = `
<footer
  class="p-9 bg-white font-sans "
>
  <div
    class="flex items-stretch gap-[54px] pb-[30px] xl:gap-8"
  >
    <a
      aria-label="Россельхозбанк"
      class="inline-flex items-center font-sans no-underline w-[204px]"
      href="/"
      target="_self"
    >
      <div
        class="text-primary-main w-10"
      >
        <svg
          aria-hidden="true"
          class="width: 40px  text-primary-main  "
          height="45"
          width="40"
        >
          <title>
            Иконка LogoIcon
          </title>
          <desc>
            Иконка LogoIcon
          </desc>
          <use
            href="icons/LogoIcon.svg#icon"
            xlink:href="icons/LogoIcon.svg#icon"
          />
        </svg>
      </div>
      <span
        class="text-primary-text font-medium ml-2.5"
      >
        Россельхозбанк
      </span>
    </a>
    <form
      class="font-sans relative grow"
    >
      <div
        class="absolute rounded h-full flex items-center justify-center pl-4 max-w-[170px] gap-3.5 pointer-events-none"
      >
        <div
          class="w-6 h-6"
        >
          <img
            alt="Иконка LoupeIcon"
            aria-hidden="true"
            class=""
            height="24"
            src="icons/LoupeIcon.svg"
            title="Иконка LoupeIcon"
            width="24"
          />
        </div>
        <label
          class="text-secondary-text text-l-light"
          for="search-bar-input"
        >
          Поиск по сайту
        </label>
      </div>
      <input
        class="h-12 pl-12 w-full peer text-l text-black border border-solid rounded-md box-border
              outline-none pr-[6%] border-main-stroke hover:border-primary-hover active:border-primary-text focus:border-primary-text h-full"
        id="search-bar-input"
        name="search-bar-input"
        type="text"
        value=""
      />
      <a
        class="text-center font-sans select-none border border-transparent inline-block cursor-pointer no-underline focus:border-primary-focus focus:border text-white bg-primary-main hover:bg-primary-hover active:bg-primary-active rounded-md invisible peer-focus:visible absolute top-[3px] right-1"
        role="button"
      >
        <div
          class="text-s px-9 py-2.5"
        >
          Найти
        </div>
      </a>
    </form>
  </div>
  <div
    class="flex items-stretch gap-[54px] xl:gap-8"
  >
    <div
      class="w-[204px] flex flex-col shrink-0 overflow-hidden"
    >
      <div
        class=""
      >
        <a
          aria-label="Обратная связь"
          class="text-center font-sans select-none border border-transparent inline-block cursor-pointer no-underline focus:border-primary-focus focus:border text-white bg-primary-main hover:bg-primary-hover active:bg-primary-active rounded-md mb-6 w-full"
          href="/"
          role="link"
          target="_blank"
        >
          <div
            class="group flex items-center justify-center gap-2 py-4 px-9  "
          >
            <div>
              <div
                class="text-xs-light text-left"
              />
              <div
                class="text-left text-l"
              >
                Обратная связь
              </div>
            </div>
          </div>
        </a>
      </div>
      <div
        class="font-sans"
      >
        <div
          class="flex gap-2.5 "
        />
        <span
          class="text-s-light text-secondary-text"
        >
          Соцсети
        </span>
      </div>
      <div
        class="font-sans"
      >
        <div
          class="flex gap-2.5 mt-6"
        />
        <span
          class="text-s-light text-secondary-text"
        >
          Мобильное приложение
        </span>
      </div>
    </div>
    <div
      class="flex flex-grow items-start justify-between gap-[54px] xl:gap-5 pt-[3px]"
    />
  </div>
  <div
    class="mt-[98px]"
  />
  <div
    class=""
  >
    <div
      class="pt-5"
    >
      <span
        class="text-xs-light text-secondary-text"
      >
        © 2000-2022 АО «Россельхозбанк» Генеральная лицензия Банка России № 3349 от 12.08.2015 г.
      </span>
    </div>
  </div>
</footer>
`;

exports[`Blocks Gallery should render block "Gallery" without content 1`] = `
<section
  class="relative font-sans text-primary-text bg-white p-[42px] overflow-hidden flex flex-col "
>
  <div>
    <section
      class="font-sans flex flex-col p-[50px] gap-3 bg-transparent !p-0"
    />
    <div
      class="flex mt-8 justify-center duration-1000"
      role="list"
      style="transform: translateX(-0px);"
    />
  </div>
  <div />
</section>
`;

exports[`Blocks GracePeriod should render block "GracePeriod" without content 1`] = `
<section
  class="font-sans bg-white p-[50px] "
>
  <section
    class="font-sans flex flex-col p-[50px] gap-3 bg-transparent !p-0 mb-4"
  />
</section>
`;

exports[`Blocks Header should render block "Header" without content 1`] = `
<header
  class="pt-6 px-20 bg-white  pb-5"
>
  <div
    class="container"
  >
    <div
      class="flex items-center"
    >
      <a
        aria-label="Россельхозбанк"
        class="inline-flex items-center font-sans no-underline mr-8"
        href="/"
        target="_self"
      >
        <div
          class="text-primary-main w-10"
        >
          <svg
            aria-hidden="true"
            class="width: 40px  text-primary-main  "
            height="45"
            width="40"
          >
            <title>
              Иконка LogoIcon
            </title>
            <desc>
              Иконка LogoIcon
            </desc>
            <use
              href="icons/LogoIcon.svg#icon"
              xlink:href="icons/LogoIcon.svg#icon"
            />
          </svg>
        </div>
        <span
          class="text-primary-text font-medium ml-2.5"
        >
          Россельхозбанк
        </span>
      </a>
      <div
        class="flex items-center ml-auto"
      >
        <a
          aria-label="Местоположение"
          class="border-transparent inline-block border border-solid bg-transparent text-center no-underline  mr-5"
          href="#"
          rel="noopener noreferrer"
        >
          <span
            class="text-primary-text hover:text-primary-main font-sans text-s-light"
          >
            Москва
          </span>
        </a>
        <a
          aria-label="Список всех доступных офисов и банкоматов"
          class="border-transparent inline-block border border-solid bg-transparent text-center no-underline  mr-7"
          href="#"
          rel="noopener noreferrer"
        >
          <span
            class="text-primary-text hover:text-primary-main font-sans text-s-light"
          >
            Офисы и банкоматы
          </span>
        </a>
        <button
          aria-label="Поиск по сайту"
          class="border-0 p-0 w-[24px] h-[24px] flex items-center bg-inherit cursor-pointer mr-5 group text-primary-text hover:text-primary-main"
          disabled=""
          type="button"
        >
          <div
            class="h-full pointer-events-none"
          >
            <svg
              aria-hidden="true"
              class="w-full h-full text-black group-hover:text-primary-hover group-hover:invert-0 pointer-events-none "
            >
              <title>
                Иконка LoupeIcon
              </title>
              <desc>
                Иконка LoupeIcon
              </desc>
              <use
                href="icons/LoupeIcon.svg#icon"
                xlink:href="icons/LoupeIcon.svg#icon"
              />
            </svg>
          </div>
        </button>
        <button
          aria-label="Дополнительные ссылки"
          class="border-0 p-0 w-[24px] h-[24px] flex items-center bg-inherit cursor-pointer text-secondary-light hover:text-secondary-hover group min-w-[32px] min-h-[32px]"
          disabled=""
          type="button"
        >
          <div
            class="h-full bg-main-divider/20 rounded-full pointer-events-none"
          >
            <svg
              aria-hidden="true"
              class="w-full h-full text-black group-hover:text-primary-hover group-hover:invert-0 "
            >
              <title>
                Иконка GridIcon
              </title>
              <desc>
                Иконка GridIcon
              </desc>
              <use
                href="icons/GridIcon.svg#icon"
                xlink:href="icons/GridIcon.svg#icon"
              />
            </svg>
          </div>
        </button>
      </div>
    </div>
    <div
      class="mt-6 h-[1px] bg-main-divider"
    />
  </div>
</header>
`;

exports[`Blocks Headline should render block "Headline" without content 1`] = `
<section
  class="font-sans flex flex-col p-[50px] gap-4 bg-transparent "
/>
`;

exports[`Blocks InsuranceAmountBlock should render block "InsuranceAmountBlock" without content 1`] = `
<section
  class="box-border py-[50px] overflow-hidden relative font-sans w-100 bg-white "
>
  <div
    class="flex"
    role="list"
    style="transform: translateX(-000%);"
  />
</section>
`;

exports[`Blocks InvestmentInfo should render block "InvestmentInfo" without content 1`] = `
<section
  class="font-sans bg-white p-9 pb-9 "
>
  <div
    class="container text-m-light"
  />
</section>
`;

exports[`Blocks LinkDocs should render block "LinkDocs" without content 1`] = `
<section
  class="font-sans text-primary-text p-[50px] bg-white "
>
  <section
    class="font-sans flex flex-col p-[50px] gap-3 bg-transparent !p-0"
  />
</section>
`;

exports[`Blocks MiniGallery should render block "MiniGallery" without content 1`] = `
<section
  class="relative font-sans text-primary-text bg-white p-[42px] overflow-hidden flex flex-col "
>
  <div>
    <section
      class="font-sans flex flex-col p-[50px] gap-3 bg-transparent !p-0"
    />
    <div
      class="flex mt-8 justify-center duration-1000"
      role="list"
      style="transform: translateX(-0px);"
    />
  </div>
  <div />
</section>
`;

exports[`Blocks MobileAppTile should render block "MobileAppTile" without content 1`] = `
<section
  class="flex justify-between font-sans p-9 box-border relative min-h-[320px]
        min-h-[360px]
        bg-white text-primary-text
        "
>
  <div
    class="font-sans flex flex-col grow h-full items-start z-10"
  >
    <h3
      class="font-sans m-0 text-h4 whitespace-pre-wrap max-w-[509px] mb-6
                  text-primary-text text-left"
    >
      Мобильное приложение
    </h3>
    <div
      class="flex grow w-full justify-between"
    >
      <div
        class="flex flex-col justify-between w-full"
      >
        <div
          class="h-full"
        >
          <div
            class="flex flex-1 items-center"
          >
            <span
              class="text-m-light text-secondary-text"
            >
              Наведите камеру телефона на QR-код и скачайте приложение
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`Blocks OfficeMap should render block "OfficeMap" without content 1`] = `
<div
  class="flex flex-col font-sans bg-white w-full "
>
  <div
    class="flex flex-col px-12 pt-12"
  >
    <div
      class="flex justify-between"
    >
      <div
        class="text-h2"
      >
        ДО   №3349/3/05
      </div>
      <div
        class="flex"
      >
        <div
          class="p-3 border rounded-md text-m flex items-center cursor-pointer text-primary-main border-green-light mr-4"
        >
          09.00–16.30
        </div>
        <div
          class="p-3 border rounded-md text-m flex items-center cursor-pointer text-golden border-golden"
        >
          без перерыва
        </div>
      </div>
    </div>
    <div
      class="flex text-l-light pt-4"
    >
      <div
        class="pr-1"
      >
        <svg
          aria-hidden="true"
          class="width: 24px  text-primary-main  "
          height="24"
          width="24"
        >
          <title>
            Иконка GeolocationIcon
          </title>
          <desc>
            Иконка GeolocationIcon
          </desc>
          <use
            href="icons/GeolocationIcon.svg#icon"
            xlink:href="icons/GeolocationIcon.svg#icon"
          />
        </svg>
      </div>
      353682, Краснодарский край, г.Ейск, ул.Гоголя, 349/ ул.Баррикадная, 42/1
    </div>
    <div
      class="flex pt-4"
    >
      <div
        class="flex mr-4"
      >
        <div
          class="mr-1"
        >
          <svg
            aria-hidden="true"
            class="width: 16px  text-primary-main  "
            height="16"
            width="16"
          >
            <title>
              Иконка MetroIcon
            </title>
            <desc>
              Иконка MetroIcon
            </desc>
            <use
              href="icons/MetroIcon.svg#icon"
              xlink:href="icons/MetroIcon.svg#icon"
            />
          </svg>
        </div>
        <span
          class="text-m"
        >
          Деловой центр
           
        </span>
        <span
          class="text-m-light"
        >
           (~30 м.)
          , 1 мин
        </span>
      </div>
      <div
        class="flex mr-4"
      >
        <div
          class="mr-1"
        >
          <svg
            aria-hidden="true"
            class="width: 16px  text-primary-main  "
            height="16"
            width="16"
          >
            <title>
              Иконка MetroIcon
            </title>
            <desc>
              Иконка MetroIcon
            </desc>
            <use
              href="icons/MetroIcon.svg#icon"
              xlink:href="icons/MetroIcon.svg#icon"
            />
          </svg>
        </div>
        <span
          class="text-m"
        >
          Выставочная
           
        </span>
        <span
          class="text-m-light"
        >
           (~120 м.)
          , 5 мин
        </span>
      </div>
      <div
        class="flex mr-4"
      >
        <div
          class="mr-1"
        >
          <svg
            aria-hidden="true"
            class="width: 16px  text-primary-main  "
            height="16"
            width="16"
          >
            <title>
              Иконка MetroIcon
            </title>
            <desc>
              Иконка MetroIcon
            </desc>
            <use
              href="icons/MetroIcon.svg#icon"
              xlink:href="icons/MetroIcon.svg#icon"
            />
          </svg>
        </div>
        <span
          class="text-m"
        >
          Деловой центр
           
        </span>
        <span
          class="text-m-light"
        >
           (~350 м.)
          , 8 мин
        </span>
      </div>
    </div>
  </div>
  <div
    class="flex justify-between pt-8"
  >
    <div
      class="flex-grow h-full w-full overflow-hidden"
    />
    <div
      class="w-[434px] min-w-[434px] pl-9 pr-12 pb-14 flex flex-col"
    >
      <div
        class="flex flex-col pb-3 border-b border-solid border-main-divider mb-3 last:border-0"
      >
        <div
          class="flex justify-between items-center w-full pb-1 text-l text-primary-text"
        >
          <div>
            Понедельник
          </div>
          <div
            class="text-m-light text-error"
          >
            Выходной
          </div>
        </div>
      </div>
      <div
        class="flex flex-col pb-3 border-b border-solid border-main-divider mb-3 last:border-0"
      >
        <div
          class="flex justify-between items-center w-full pb-1 text-l text-primary-text"
        >
          <div>
            Вторник
          </div>
          <div
            class="text-m-light text-error"
          >
            Выходной
          </div>
        </div>
      </div>
      <div
        class="flex flex-col pb-3 border-b border-solid border-main-divider mb-3 last:border-0"
      >
        <div
          class="flex justify-between items-center w-full pb-1 text-l text-primary-text"
        >
          <div>
            Среда
          </div>
          <div>
            09.00–16.30
          </div>
        </div>
        <div
          class="flex justify-between items-center w-full pb-1 text-m-light text-primary-main"
        >
          <div>
            без перерыва
          </div>
        </div>
      </div>
      <div
        class="flex flex-col pb-3 border-b border-solid border-main-divider mb-3 last:border-0"
      >
        <div
          class="flex justify-between items-center w-full pb-1 text-l text-primary-text"
        >
          <div>
            Четверг
          </div>
          <div>
            09.00–16.30
          </div>
        </div>
        <div
          class="flex justify-between items-center w-full pb-1 text-m-light text-error"
        >
          <div>
            Перерыв
          </div>
          <div>
            13:00 - 14:00
          </div>
        </div>
        <div
          class="pb-1 text-s-light text-secondary-text"
        >
          Не работает прием денег с 17:00 до 19:00
        </div>
      </div>
      <div
        class="flex flex-col pb-3 border-b border-solid border-main-divider mb-3 last:border-0"
      >
        <div
          class="flex justify-between items-center w-full pb-1 text-l text-primary-text"
        >
          <div>
            Пятница
          </div>
          <div>
            09.00–16.30
          </div>
        </div>
        <div
          class="flex justify-between items-center w-full pb-1 text-m-light text-primary-main"
        >
          <div>
            без перерыва
          </div>
        </div>
      </div>
      <div
        class="flex flex-col pb-3 border-b border-solid border-main-divider mb-3 last:border-0"
      >
        <div
          class="flex justify-between items-center w-full pb-1 text-l text-primary-text"
        >
          <div>
            Суббота
          </div>
          <div>
            09.00–15.00
          </div>
        </div>
        <div
          class="flex justify-between items-center w-full pb-1 text-m-light text-primary-main"
        >
          <div>
            без перерыва
          </div>
        </div>
      </div>
      <div
        class="flex flex-col pb-3 border-b border-solid border-main-divider mb-3 last:border-0"
      >
        <div
          class="flex justify-between items-center w-full pb-1 text-l text-primary-text"
        >
          <div>
            Воскресенье
          </div>
          <div
            class="text-m-light text-error"
          >
            Выходной
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Blocks OfficeServicesBlock should render block "OfficeServicesBlock" without content 1`] = `
<section
  class="font-sans bg-white p-8 flex flex-col "
/>
`;

exports[`Blocks OtherProducts should render block "OtherProducts" without content 1`] = `
<section
  class="font-sans text-primary-text "
/>
`;

exports[`Blocks OtherProductsItem should render block "OtherProductsItem" without content 1`] = `
<div
  class="border-0 border-b border-solid border-main-divider undefined"
>
  <div>
    <div
      class="box-border"
    >
      <div
        class="transition-max-h duration-300 overflow-hidden max-h-0 grid grid-cols-12 gap-1 border-box"
      />
    </div>
    <button
      class="border border-transparent bg-primary-main font-sans text-white cursor-pointer hover:bg-primary-hover focus:border-primary-text active:bg-primary-active outline-none flex justify-center w-full px-0 py-5 mb-[1px] "
      data-theme=""
    >
      <span
        class="text-h4 pr-3"
      />
      <div
        class="flex-shrink-0 my-auto"
      >
        <svg
          aria-hidden="true"
          class="width: 20px  text-black  invert"
          height="20"
          width="20"
        >
          <title>
            Иконка ArrowDownIcon
          </title>
          <desc>
            Иконка ArrowDownIcon
          </desc>
          <use
            href="icons/ArrowDownIcon.svg#icon"
            xlink:href="icons/ArrowDownIcon.svg#icon"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`Blocks PictureText should render block "PictureText" without content 1`] = `
<section
  class="relative font-sans py-12 px-24 bg-white text-primary-text "
>
  <section
    class="font-sans flex flex-col p-[50px] gap-3 bg-white !p-0"
  />
  <div
    class="flex justify-center gap-[122px] mt-[30px]"
  >
    <div
      class="w-[558px] m-auto"
    />
  </div>
</section>
`;

exports[`Blocks Placeholder should render block "Placeholder" without content 1`] = `
<section
  class="bg-white text-primary-text font-sans p-9 box-border undefined pr-[9.4rem] min-h-[360px] "
>
  <section
    class="font-sans flex flex-col p-[50px] gap-4 bg-transparent !p-0 max-w-[600px]"
  >
    <div
      class="text-xl-light text-primary-text text-center"
    >
      Блок в разработке...
    </div>
  </section>
  <figure
    class="m-0 min-w-[80%]"
  >
    <div
      class="h-4 mt-2 bg-secondary-light"
      style="width: 100%;"
    />
    <div
      class="h-4 mt-2 bg-secondary-light"
      style="width: 61%;"
    />
    <div
      class="h-4 mt-2 bg-secondary-light"
      style="width: 38%;"
    />
    <div
      class="h-4 mt-2 bg-secondary-light"
      style="width: 23%;"
    />
  </figure>
</section>
`;

exports[`Blocks ProductBlock should render block "ProductBlock" without content 1`] = `
<section
  class="font-sans overflow-hidden p-[50px] flex flex-col box-border min-h-[454px] bg-white text-primary-text "
>
  <div
    class="flex grow justify-between items-stretch h-full "
  >
    <div
      class="flex flex-col "
    >
      <section
        class="font-sans flex flex-col p-[50px] gap-4 bg-white !p-0 max-w-[600px]"
      />
      <div
        class="font-sans flex flex-col grow h-full items-start "
      >
        
        <div
          class="flex grow w-full justify-between"
        >
          <div
            class="flex flex-col justify-between w-full"
          >
            <div
              class="h-full"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`Blocks ProductGallery should render block "ProductGallery" without content 1`] = `
<section
  class="box-border pt-[50px] overflow-hidden relative font-sans w-100 mb-6 
        bg-white text-primary-text"
>
  <div
    class="flex duration-1000 pb-14"
    role="list"
    style="transform: translateX(-000%);"
  />
  <div
    class="flex items-center absolute bottom-6 left-0 right-0 px-[26px] box-border h-28"
  />
</section>
`;

exports[`Blocks ProductTile should render block "ProductTile" without content 1`] = `
<section
  class="overflow-hidden font-sans p-9 box-border relative justify-between grid min-h-[364px]
           bg-white text-primary-text pr-[9.4rem]"
>
  <section
    class="font-sans flex flex-col p-[50px] gap-2 bg-white !p-0 !bg-transparent z-10 "
  />
  <div
    class="z-10 grid grid-cols-[max-content_1fr] auto-rows-auto gap-x-6 gap-y-2.5 items-baseline
        100%"
  />
</section>
`;

exports[`Blocks PromoTile should render block "PromoTile" without content 1`] = `
<section
  class="bg-white text-primary-text font-sans p-9 box-border  bg-white text-primary-text pr-[9.4rem] min-h-[360px] "
>
  <div
    class="font-sans flex flex-col grow h-full items-start "
  >
    <section
      class="font-sans flex flex-col p-[50px] gap-4 bg-white !p-0 max-w-[600px]"
    >
      <h2
        class="font-sans m-0 text-h2 whitespace-pre-wrap text-primary-text text-left"
      >
        Акции и спецпредложения
      </h2>
    </section>
    <div
      class="flex grow w-full justify-between"
    >
      <div
        class="flex flex-col justify-between w-full"
      >
        <div
          class="h-full"
        >
          <div
            class="mt-1.5"
          >
            <div
              class="text-l"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`Blocks Recommendation should render block "Recommendation" without content 1`] = `
<section
  class="relative font-sans p-9 overflow-hidden text-center bg-white text-primary-text "
>
  <div>
    <div
      class="flex duration-1000 gap-3.5"
      role="list"
      style="transform: translateX(-0px);"
    />
    <div>
      <div />
    </div>
  </div>
  <div
    class="absolute top-0 bottom-0 w-[84px] left-0 bg-opacity-from-white"
  />
  <div
    class="absolute top-0 bottom-0 w-[84px] right-0 bg-opacity-to-white"
  />
</section>
`;

exports[`Blocks SafeDepositRental should render block "SafeDepositRental" without content 1`] = `
<section
  class=""
>
  <div
    class="font-sans bg-white px-8 py-12"
  >
    <div
      class="flex justify-between align-top mb-6"
    >
      <div
        class="flex-1 mr-9"
      >
        <div
          class="flex justify-between gap-4 mb-6"
        >
          <div
            class="max-w-[396px] w-1/2"
          >
            <div
              class=""
            >
              <span
                class="mb-2 flex text-primary-text"
              >
                Регион
              </span>
              <div
                class="relative z-10"
              >
                <div
                  class="text-l flex justify-between items-center mb-0.5 text-primary-text cursor-pointer
            border border-main-stroke rounded-md hover:border-primary-hover"
                >
                  <p
                    class="p-4 pr-8 h-[56px] overflow-hidden text-ellipsis whitespace-nowrap"
                  />
                  <img
                    alt="Иконка ArrowUpIcon"
                    aria-hidden="true"
                    class="absolute right-3 rotate-180"
                    height="16"
                    src="icons/ArrowUpIcon.svg"
                    title="Иконка ArrowUpIcon"
                    width="16"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="max-w-[396px] w-1/2"
          >
            <div
              class=""
            >
              <span
                class="mb-2 flex text-primary-text"
              >
                Отделение
              </span>
              <div
                class="relative z-10"
              >
                <div
                  class="text-l flex justify-between items-center mb-0.5 text-primary-text cursor-pointer
            border border-main-stroke rounded-md hover:border-primary-hover"
                >
                  <p
                    class="p-4 pr-8 h-[56px] overflow-hidden text-ellipsis whitespace-nowrap"
                  >
                    Выберите отделение
                  </p>
                  <img
                    alt="Иконка ArrowUpIcon"
                    aria-hidden="true"
                    class="absolute right-3 rotate-180"
                    height="16"
                    src="icons/ArrowUpIcon.svg"
                    title="Иконка ArrowUpIcon"
                    width="16"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mb-6"
        >
          <span
            class="block text-m-light mb-[3px]"
          >
            Срок аренды
          </span>
          <div>
            <label
              class="block relative"
            >
              <input
                class="m-0 mt-2 font-sans text-h3 w-full h-14 border border-solid border-main-stroke rounded-md
            outline-none p-0 pl-4 box-border text-primary-text hover:border-primary-hover focus:border-primary-focus disabled:border-main-stroke disabled:bg-main-divider"
                value="26"
              />
              <div
                class="absolute inset-x-0 -bottom-1 px-4 leading-[18px]"
              >
                <input
                  class="box-border w-full m-0 cursor-pointer slider"
                  max="365"
                  min="1"
                  step="1"
                  style="background-size: 6.87% 100%;"
                  type="range"
                  value="26"
                />
              </div>
            </label>
            <div
              class="flex justify-between my-2"
            >
              <span
                class="text-s-light text-secondary-text"
              >
                От 1 дня
              </span>
              <span
                class="text-s-light text-secondary-text"
              >
                До 365 дней
              </span>
            </div>
          </div>
        </div>
        <div
          class="flex justify-between mb-6"
        >
          <div
            class="mr-4 w-full"
          >
            <div
              class=""
            >
              <span
                class="mb-2 flex text-primary-text"
              >
                Размер
              </span>
              <div
                class="relative z-10"
              >
                <div
                  class="text-l flex justify-between items-center mb-0.5 text-primary-text cursor-pointer
            border border-main-stroke rounded-md hover:border-primary-hover"
                >
                  <p
                    class="p-4 pr-8 h-[56px] overflow-hidden text-ellipsis whitespace-nowrap"
                  >
                    Выберите размер
                  </p>
                  <img
                    alt="Иконка ArrowUpIcon"
                    aria-hidden="true"
                    class="absolute right-3 rotate-180"
                    height="16"
                    src="icons/ArrowUpIcon.svg"
                    title="Иконка ArrowUpIcon"
                    width="16"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="w-full"
          >
            <div
              class=""
            >
              <span
                class="mb-2 flex text-primary-text"
              >
                Параметры ячейки, мм (ВхШхД)
              </span>
              <div
                class="relative z-10"
              >
                <div
                  class="text-l flex justify-between items-center mb-0.5 text-primary-text cursor-pointer
            border border-main-stroke rounded-md hover:border-primary-hover"
                >
                  <p
                    class="p-4 pr-8 h-[56px] overflow-hidden text-ellipsis whitespace-nowrap"
                  >
                    Выберите параметр ячейки
                  </p>
                  <img
                    alt="Иконка ArrowUpIcon"
                    aria-hidden="true"
                    class="absolute right-3 rotate-180"
                    height="16"
                    src="icons/ArrowUpIcon.svg"
                    title="Иконка ArrowUpIcon"
                    width="16"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <span
          class="text-secondary-text text-l-light"
        >
          Тип договора
        </span>
        <div
          class="flex justify-between items-center mt-5"
        >
          <div>
            <div
              class="mb-2"
            >
              <label
                class="font-sans flex items-center relative cursor-pointer"
              >
                <input
                  class="appearance-none flex justify-center items-center shrink-0 w-5 h-5 border border-gray hover:border-checkbox-hover
        checked:border-2 checked:!border-primary-main focus:checked:border-primary-main focus:border-primary-text active:border-primary-text
        after:block after:w-2.5 after:h-2.5 after:rounded-full checked:after:bg-primary-main outline-none rounded-full cursor-pointer"
                  name="contractType"
                  type="radio"
                  value="option1"
                />
                <span
                  class="text-primary-text ml-3 cursor-pointer"
                >
                  Простое хранение
                </span>
              </label>
            </div>
            <div>
              <label
                class="font-sans flex items-center relative cursor-pointer"
              >
                <input
                  checked=""
                  class="appearance-none flex justify-center items-center shrink-0 w-5 h-5 border border-gray hover:border-checkbox-hover
        checked:border-2 checked:!border-primary-main focus:checked:border-primary-main focus:border-primary-text active:border-primary-text
        after:block after:w-2.5 after:h-2.5 after:rounded-full checked:after:bg-primary-main outline-none rounded-full cursor-pointer"
                  name="contractType"
                  type="radio"
                  value="option2"
                />
                <span
                  class="text-primary-text ml-3 cursor-pointer"
                >
                  Сделка с недвижимостью
                </span>
              </label>
            </div>
          </div>
          <a
            class="text-center font-sans select-none border border-transparent inline-block cursor-pointer no-underline focus:border-primary-focus focus:border text-white bg-primary-main hover:bg-primary-hover active:bg-primary-active rounded-md "
            role="button"
          >
            <div
              class="group flex items-center justify-center gap-2 py-4 px-9  "
            >
              <div>
                <div
                  class="text-xs-light text-left"
                />
                <div
                  class="text-left text-l"
                >
                  Офисы на карте
                </div>
              </div>
            </div>
          </a>
        </div>
      </div>
      <div
        class="flex flex-col justify-between"
      >
        <div
          class="flex"
        >
          <div
            class="mr-11"
          >
            <div
              class="text-m-light text-secondary-text mb-1"
            >
              Аренда за
            </div>
            <span
              class="text-h3 text-primary-text"
            >
              26
            </span>
          </div>
          <div
            class=""
          >
            <div
              class="text-m-light text-secondary-text mb-1"
            >
              Цена
            </div>
            <span
              class="text-h3 text-primary-text"
            >
              0 ₽
            </span>
          </div>
        </div>
        <div
          class="bg-primary-main px-10 pt-10 pb-4 text-center"
        >
          <svg
            aria-hidden="true"
            class="width: 290px  text-primary-main  "
            height="257"
            width="290"
          >
            <title>
              Иконка PackA4Icon
            </title>
            <desc>
              Иконка PackA4Icon
            </desc>
            <use
              href="icons/PackA4Icon.svg#icon"
              xlink:href="icons/PackA4Icon.svg#icon"
            />
          </svg>
          <span
            class="text-s-light text-white opacity-80 mt-2 inline-block"
          >
            На рисунки изображена пачка
            <br />
             листов формата А4
          </span>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`Blocks StepsBlock should render block "StepsBlock" without content 1`] = `
<section
  class="box-border py-[50px] font-sans px-[70px] flex flex-col items-center bg-white text-primary-text "
/>
`;

exports[`Blocks Tabs should render block "Tabs" without content 1`] = `
<section
  class="box-border flex gap-x-1 "
/>
`;

exports[`Blocks TariffsTable should render block "TariffsTable" without content 1`] = `
<section
  class="bg-white font-sans p-[50px] overflow-hidden text-primary-text relative  "
>
  <div
    role="table"
  >
    <div
      class="relative"
    />
  </div>
</section>
`;

exports[`Blocks TextBlock should render block "TextBlock" without content 1`] = `
<section
  class="font-sans px-9 py-4 flex bg-white "
>
  <div
    class="py-0.5"
  />
</section>
`;

exports[`Blocks Tile should render block "Tile" without content 1`] = `
<section
  class="overflow-hidden font-sans p-9 pr-3 box-border  bg-white text-primary-text pr-[9.4rem] min-h-[360px] "
>
  <div
    class="font-sans flex flex-col grow h-full items-start "
  >
    <div
      class="flex grow w-full justify-between"
    >
      <div
        class="flex flex-col justify-between w-full"
      >
        <div
          class="h-full"
        />
      </div>
    </div>
  </div>
</section>
`;
